MINOR installation layout issue with lack of clearing
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/phpinstaller/trunk@62674 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/config-form.css
+++ b/config-form.css
@@ -89,6 +89,7 @@ table.testResults {
 }
 #Layout h4 {
 	font-size: 2em;
+	clear: left;
 }
 .testResults td {
 	border: 1px #CCC solid;
